test/fail/fail_6.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: fail_6.prsl:10:12: error: at '--': Illegal postfix expression

a = 2;

if (a > 1)
    print a;
else
    print 0--;